ok, now I'm sure everything is fixed

--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -107,7 +107,8 @@
         "only_caller_build": "Неа! Только вызывающий эту команду может увидеть билд этого персонажа",
         "get_build_error": "Что-то пошло не так во время получения информации об этом персонаже",
         "avatar_info_start": "Информация о персонаже {avatar_name} игрока {uid}:",
-        "detailed_info_disabled": "У этого игрока отключены подробные детали персонажей"
+        "detailed_info_disabled": "У этого игрока отключены подробные детали персонажей",
+        "avatar_removed_from_stand": "Этого персонажа больше нету на витрине!"
     },
     "inventory": {
         "weapons": "Оружия ({rarity}):",
