update to 4.1 (probably VERY buggy)

--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -129,7 +129,7 @@
     },
     "like_reward": {
         "on_like": "{mention}, спасибо за лайк на пост {link}\nЗа это вы получаете 50 примогемов! ❀",
-	"on_like_rare": "авв, {mention}, с-спасибо за л-лайк на постик {link}, ~мне т-так приятно, ахх... :3\n~за это я тебе д-дам... 50 примогемчиков, наслаждайся)"
+	    "on_like_rare": "авв, {mention}, с-спасибо за л-лайк на постик {link}, мне т-так приятно~... :3\nза это я тебе д-дам... 50 примогемчиков, наслаждайся~"
     },
     "minigames": {
         "start": "Вы начали выполнять поручения. Возвращайтесь через {time} минут{ending}!",
