--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -92,7 +92,7 @@
         "uid_not_set": "Вы не установили свой UID! Его можно установить с помощью команды \"!установить айди <UID>\"",
         "replier_no_uid": "Человек, на которого вы ответили, ещё не создал аккаунт/не указал айди, однако он может это сделать, написав \"!установить айди <UID>\"",
         "player_info": "Информация об аккаунте [id{from_id}|этого] игрока",
-        "enka_network_error": "Похоже, что сервис enka.network сейчас не работает!\nЕсли же это не так, пожалуйста, сообщите об этой ошибке [id322615766|мне]",
+        "enka_network_error": "Похоже, что сервис enka.network сейчас не работает!\nЕсли же это не так, пожалуйста, сообщите об этой ошибке [id{user_id}|мне]",
         "current_account_deleted": "Ээээ... Информацию об этом UID не получилось найти, похоже этот аккаунт в геншине был забанен/удален\n(или это ошибка enka.network)",
         "uid_not_found": "Игрока с таким UID не существует!",
         "unknown_value": "[неизвестно]",
@@ -142,7 +142,7 @@
         "set_confirmation": "Вы успешно поменяли никнейм",
         "dot_found": "В нике не может быть точка!",
         "length_exceeded": "В нике не может быть больше 35 символов (включая пробел)",
-        "swear_ban": "Вы были забанены в группе.\nДля разбана, напишите [id322615766|мне в личные сообщения]",
+        "swear_ban": "Вы были забанены в группе.\nДля разбана, напишите [id{user_id}|мне в личные сообщения]",
         "ban_error": "А, ещё, просьба к администратору беседы - выдайте мне пожалуйста админку, что бы я мог нормально работать (точно никак не связано с предыдущими событиями)"
     },
     "ping": {
@@ -168,7 +168,7 @@
         "already_redeemed": "Вы уже забрали этот промокод!",
         "user_already_redeemed": "Вы можете использовать только 1 промокод игрока",
         "promocode_author_deleted": "Автор этого промокода - ишак, который удалил свой аккаунт из всех бесед",
-        "promocode_author_reward": "[id{author}|{nickname_author}], [id{from_id}|этот игрок] актививировал ваш промокод, вы получили 4800 примогемов!",
+        "promocode_author_reward": "[id{author}|{nickname_author}], [id{from_id}|этот игрок] активировал ваш промокод, вы получили 4800 примогемов!",
         "promocode_redeemer_reward": "Вы успешно активировали промокод игрока [id{author}|{nickname_author}]!\nЗа это вы получаете 800 примогемов",
         "normal_promocode_reward": "Вы успешно получили {reward} примогемов!",
         "your_promocode": "Ваш промокод: \"{promocode}\"",
@@ -176,7 +176,7 @@
         "share_promocode_reward": "За каждого приглашенного человека вы получите 4800 примогемов (30 круток)"
     },
     "set_uid": {
-        "enka_network_error": "Похоже, что сервис enka.network сейчас не работает!\nЕсли же это не так, пожалуйста, сообщите об этой ошибке [id322615766|мне]",
+        "enka_network_error": "Похоже, что сервис enka.network сейчас не работает!\nЕсли же это не так, пожалуйста, сообщите об этой ошибке [id{user_id}|мне]",
         "player_not_found": "Такого игрока не существует!",
         "unknown_nickname": "[неизвестный ник]",
         "unknown_adv_rank": "[неизвестный]",
