--- a/bot/languages/en.json
+++ b/bot/languages/en.json
@@ -92,7 +92,7 @@
         "uid_not_set": "You haven't set your UID yet! You can set it using the command \"!set uid <UID>\"",
         "replier_no_uid": "The person you replied to has not created an account/has not set their UID yet, but they can do so by typing \"!set uid <UID>\"",
         "player_info": "Information about [id{from_id}|this] player's account",
-        "enka_network_error": "It looks like enka.network is currently down!\nIf this isn't the case, please let me know [id322615766|here]",
+        "enka_network_error": "It looks like enka.network is currently down!\nIf this isn't the case, please let me know [id{user_id}|here]",
         "current_account_deleted": "Uh... I couldn't find any information on this UID, it seems this Genshin account was banned/deleted\n(or it's an enka.network error)",
         "uid_not_found": "There is no player with that UID!",
         "unknown_value": "[unknown]",
@@ -142,7 +142,7 @@
         "set_confirmation": "Вы успешно поменяли никнейм",
         "dot_found": "В нике не может быть точка!",
         "length_exceeded": "В нике не может быть больше 35 символов (включая пробел)",
-        "swear_ban": "Вы были забанены в группе.\nДля разбана, напишите [id322615766|мне в личные сообщения]",
+        "swear_ban": "Вы были забанены в группе.\nДля разбана, напишите [id{user_id}|мне в личные сообщения]",
         "ban_error": "А, ещё, просьба к администратору беседы - выдайте мне пожалуйста админку, что бы я мог нормально работать (точно никак не связано с предыдущими событиями)"
     },
     "ping": {
@@ -176,7 +176,7 @@
         "share_promocode_reward": "За каждого приглашенного человека вы получите 4800 примогемов (30 круток)"
     },
     "set_uid": {
-        "enka_network_error": "Похоже, что сервис enka.network сейчас не работает!\nЕсли же это не так, пожалуйста, сообщите об этой ошибке [id322615766|мне]",
+        "enka_network_error": "Похоже, что сервис enka.network сейчас не работает!\nЕсли же это не так, пожалуйста, сообщите об этой ошибке [id{user_id}|мне]",
         "player_not_found": "Такого игрока не существует!",
         "unknown_nickname": "[неизвестный ник]",
         "unknown_adv_rank": "[неизвестный]",
