start translate fix

--- a/bot/languages/ru.json
+++ b/bot/languages/ru.json
@@ -183,7 +183,7 @@
         "set_success": "Вы успешно установили UID игрока \"{nickname}\" (AR: {adv_rank})",
         "HuTao_easter_egg": "Ху Тао на аве, здоровья маме"
     },
-    "create_accoutn": {
+    "create_account": {
         "already_created": "В этом чате вы уже присоединились к боту",
         "new_user": "Вы присоединились к боту!\nНапишите !персонаж, что бы увидеть ваш никнейм и количество примогемов"
     },
