account creation text fix

--- a/bot/languages/en.json
+++ b/bot/languages/en.json
@@ -185,7 +185,7 @@
     },
     "create_account": {
         "already_created": "В этом чате вы уже присоединились к боту",
-        "new_player": "Вы присоединились к боту!\nНапишите !персонаж, что бы увидеть ваш никнейм и количество примогемов"
+        "new_user": "Вы присоединились к боту!\nНапишите !персонаж, что бы увидеть ваш никнейм и количество примогемов"
     },
     "top": {
         "we_will_come_back": "Топ вернется в будущем!"
